Remote replication and recovery changes (#20424)
* Changes to get remote upload and replication to work for lucene indices

Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

* Replication changes

Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

* Fixes for remote store integration (#20325)

Signed-off-by: Mohit Godwani <mgodwan@amazon.com>

* Updated and Refactored the code to have only required changes for recovery

* Removed extra logging lines

* Resolving PR comments

* Updated the VSRManagerTests to use ParquetFileMetadata as flushResult

* Fixing RemoteSegmentStoreDirectoryTests and RemoteSegmentStoreDirectoryWithPinnedTimestampTests

* Fix for merged files not getting uploaded/deleted

Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

* Added support for SSE KMS testing via run.gradle

Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

* [RemoteStore] Add support for repository with server side encryption enabled to avoid client side encryption  (#19630)

Signed-off-by: Pranit Kumar <pranikum@amazon.com>

* Adding support for SSE KMS in RemoteSegmentStoreDirectoryFactory

Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

* Fixing lucene remote recovery and files should not get written in replicas

* Removing extra logging statements

* Revert "Fixing lucene remote recovery and files should not get written in replicas"

This reverts commit 1f3aa80835bb2065ad8e196fb9c1f50bbe031b15.

* Using NIOFSDirectory in GenericStoreDirectory

Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

* Adding NRTReplicationCompositeEngine for checkpoint tracking during recovery

Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

* Using index input for checksum calculation instead of input stream

Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

* Fixing lucene remote recovery and files should not get written in replicas

* Fixed RemoteIndexRecoveryIT::testRerouteRecovery

* Removed the isReadonly check from compositeEngine as we have the NRTEngine now

* R